<resources>
    <string name="app_name">Do It Yourself</string>
    <string name="menu_addTask">Add</string>
    <string name="menu_cancelTask">Cancel</string>
    <string name="button_addTask">Add DIY Task</string>
    <string name="menu_deleteTask">Delete</string>
    <string name="menu_saveTask">Save</string>
    <string name="deleteTask">Delete</string>
    <string name="enter_diyTask_title">Please enter a task title</string>
    <string name="hint_taskTitle">DIY Title</string>
    <string name="hint_taskDescription">Description</string>
    <string name="save_task">Update</string>
    <string name="button_addRating">Add DIY Task</string>
    <string name="edit_diy">Edit Diy Task</string>
    <string name="search_list">Search</string>



    <!-- Image Strings -->
    <string name="button_addImage"> Add Image </string>
    <string name="select_task_image">Select task image</string>
    <string name="change_task_image">Change task image</string>
    <string name="take_photo">Take Photo</string>
    <string name="button_takePhoto">Camera</string>

    <!-- Radio Button Strings -->
    <string name="easy">Easy</string>
    <string name="hard">Hard</string>
    <string name="very_hard">Very Hard</string>

    <string name="btnTakePhoto">Take Picture</string>
    <!-- menu res -->
    <string name="action_diyList">Task List</string>
    <string name="action_diy">New Task</string>
    <string name="action_camera">Camera</string>
    <!-- Nav Drawer access -->
    <string name="action_login">Login</string>
    <string name="action_register">Register</string>
    <string name="group_access">Account</string>

    <!-- Nav Drawer support -->
    <string name="action_share">Share</string>
    <string name="action_send">Send</string>
    <string name="group_communicate">Communicate</string>
    <string name="switch_theme">Theme</string>
    <string name="select_profile_image">Select Profile Image</string>

    <!-- Nav Drawer About -->
    <string name="nav_header_title">DoItYourSelf</string>
    <string name="nav_header_subtitle">Community of Practical People</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_about">About Us</string>
    <string name="aboutus_title">Android Dev - Assignment One - Ian H</string>
    <string name="aboutus_message">When it comes to DIY (Do It Yourself) it is easy to say you\'ll
        get round to but never do. With this app at your disposal, you can manage all those many
        unique ideas. DIY as the name says it encourages one to use their own hands and handcraft
        them. Whether it is art, cooking, a home makeover or dressing makeover, handmade gifts,
        holiday decor this is the space for you! Ideas that can help you save on money and transform
        from boring to fabulous.</string>

    <!-- list view strings   -->
    <string name="noTasksFound">Task List Empty...\n Go create some tasks now!</string>

    <string name="createTaskError">Error : Unable to create a new DIY task...</string>


    <!-- START Firebase Resources-->

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="reset_password">Forgot Password</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Please Login Below</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="messageLoading">Please Wait while the DIY items are Loading...</string>





</resources>