<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/diyFragment"
            android:icon="@drawable/ic_menu_new"
            android:title="@string/action_diy" />
        <item
            android:id="@+id/diyListFragment"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/action_diyList" />
        <item
            android:id="@+id/cameraFragment"
            android:icon="@drawable/ic_launcher_about"
            android:title="@string/action_camera" />
        <item
            android:id="@+id/toggleTheme"
            android:icon="@drawable/ic_dark_mode"
            android:title="@string/switch_theme"
            app:actionLayout="@layout/toggle_theme"/>
    </group>

    <item android:title="@string/group_communicate">
        <menu>

            <item
                android:id="@+id/aboutusFragment"
                android:icon="@drawable/ic_launcher_about"
                android:title="@string/action_about" />
        </menu>
    </item>

    <item android:title="@string/group_access">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@android:drawable/ic_menu_revert"
                android:onClick="signOut"
                android:title="@string/sign_out" />
        </menu>
    </item>
</menu>