<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/diyFragment"
        android:orderInCategory="100"
        android:title="@string/action_diy"
        app:showAsAction="never" />
    <item
        android:id="@+id/aboutusFragment"
        android:orderInCategory="100"
        android:title="@string/action_about"
        app:showAsAction="never" />
    <item
        android:id="@+id/search"
        android:title="@string/search_list"
        android:icon="@drawable/ic_menu_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:id="@+id/toggleDonations"
        android:title=""
        app:actionLayout="@layout/togglebutton_layout"
        app:showAsAction="always" />
</menu>